@@ -6,16 +6,18 @@ MANIFEST
 META.yml
 make-dist.sh
 t/atom.t
+t/clone_item.t
 t/datetime.t
 t/encoding.t
 t/image.t
+t/invalid_pubdate.t
 t/media.t
+t/multi_category.t
 t/new.t
 t/rdf.t
+t/remove_item.t
 t/round.t
 t/rss.t
 t/setget.t
 t/sort_item.t
 t/xmlns.t
-t/invalid_pubdate.t
-t/multi_category.t
