@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-FeedPP
-version:      0.10
+version:      0.11
 version_from: lib/XML/FeedPP.pm
 installdirs:  site
 requires:
